Fix bug with conversations list sometimes becoming empty on ONLINE_STATUS message receipt; Use the more performant setTimeout to recursively poll the server instead of the less-performant setInterval; Add the 'addEventListenerOnce' util function to help in adding eventListeners once (instead of the normal/native/usual addEventListener which adds events more than once (depending on where it is used)) which (could) then lead or leads to bugs; Add the inert attribute to the tab panels for when each is not currently active/visible in order that they might not receive focus in the tab order and for accessibility...also add fade effect for scroll bars as I don't like flickers :/, and slightly modify UI; Add feature to display away date-time after three minutes of user being away; Add the 'emitUserOnlineStatus' function...name's obvious...the function uses a recursive approach to check for when the user's gained/lost internet connection then updates (currently) the Chat UI and the online_status of the (currently authenticated) user...the function is called when user loses/gains internet connection or when socket disconnects or when user is currently not on the app, e.g. on another tab...it returns either of two thunks: a recursive function which recursively checks if user's connection has been successfully established in order for to update the user's online_status...or it returns a function which is the result of a failed network connection.

--- a/teach-me-ui/src/styles/Main/_Chat.RightPane.scss
+++ b/teach-me-ui/src/styles/Main/_Chat.RightPane.scss
@@ -1,12 +1,19 @@
 .chat-right-pane {
   background-color: #eee;
   max-height: 100vh;
+  border-left: 0.15rem solid #ddd;
+
+  .chat-header {
+    background-color: inherit;
+  }
 
   .user-info-container {
     overflow-x: hidden;
 
     > section:first-child {
       position: relative;
+      z-index: 3;
+
       &::before {
         @include before-or-after(
           $bg: #ddd,
@@ -16,13 +23,11 @@
           $t: -7rem,
           $l: -1.5rem
         );
-
-        // background: {
-        //   image: url('/images/avatar-1.png');
-        //   size: cover;
-        //   position: center;
-        // };
       }
+    }
+
+    + .scroll-bar-fader {
+      background-color: #eee !important;
     }
 
     .chat-avatar {
